; ModuleID = '/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_crypt_apple.c_mz_crypt_hmac_init.c'
source_filename = "/home/carl/AnghaBench/ZipArchive/SSZipArchive/minizip/extr_mz_crypt_apple.c_mz_crypt_hmac_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@MZ_PARAM_ERROR = common dso_local global i32 0, align 4
@MZ_HASH_SHA1 = common dso_local global i64 0, align 8
@kCCHmacAlgSHA1 = common dso_local global i32 0, align 4
@MZ_HASH_SHA256 = common dso_local global i64 0, align 8
@kCCHmacAlgSHA256 = common dso_local global i32 0, align 4
@MZ_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mz_crypt_hmac_init(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_2__*, align 8
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = bitcast i8* %10 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %11, %struct.TYPE_2__** %8, align 8
  store i32 0, i32* %9, align 4
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %13 = icmp eq %struct.TYPE_2__* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %3
  %15 = load i8*, i8** %6, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %14, %3
  %18 = load i32, i32* @MZ_PARAM_ERROR, align 4
  store i32 %18, i32* %4, align 4
  br label %48

19:                                               ; preds = %14
  %20 = load i8*, i8** %5, align 8
  %21 = call i32 @mz_crypt_hmac_reset(i8* %20)
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @MZ_HASH_SHA1, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %29

27:                                               ; preds = %19
  %28 = load i32, i32* @kCCHmacAlgSHA1, align 4
  store i32 %28, i32* %9, align 4
  br label %40

29:                                               ; preds = %19
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @MZ_HASH_SHA256, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %37

35:                                               ; preds = %29
  %36 = load i32, i32* @kCCHmacAlgSHA256, align 4
  store i32 %36, i32* %9, align 4
  br label %39

37:                                               ; preds = %29
  %38 = load i32, i32* @MZ_PARAM_ERROR, align 4
  store i32 %38, i32* %4, align 4
  br label %48

39:                                               ; preds = %35
  br label %40

40:                                               ; preds = %39, %27
  %41 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 1
  %43 = load i32, i32* %9, align 4
  %44 = load i8*, i8** %6, align 8
  %45 = load i32, i32* %7, align 4
  %46 = call i32 @CCHmacInit(i32* %42, i32 %43, i8* %44, i32 %45)
  %47 = load i32, i32* @MZ_OK, align 4
  store i32 %47, i32* %4, align 4
  br label %48

48:                                               ; preds = %40, %37, %17
  %49 = load i32, i32* %4, align 4
  ret i32 %49
}

declare dso_local i32 @mz_crypt_hmac_reset(i8*) #1

declare dso_local i32 @CCHmacInit(i32*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
